# e-mahhir

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cmds.txt  main.py  pyproject.toml  requirements.txt
app/: .env.example  main.py  utils.py
app/api/routes/: test.py
app/core/: config.py  email_utils.py  security.py
app/crud/: app_customer.py  app_user.py  complaint.py  customer.py  customer_product.py  employee.py  inventory_product.py  notification.py  role.py  stock_movement.py  subscription_plan.py  superadmin.py  tenant.py  tenant_customer.py  tenant_employee.py  tenant_subscription.py  user.py
app/db/: base.py  db_schema.sql  deps.py  sample_data.sql  session.py
app/db/models/: __init__.py  app_customer.py  app_user.py  complaint.py  complaint_attachment.py  customer.py  customer_product.py  employee.py  inventory_item.py  inventory_product.py  notification.py  role.py  stock_movement.py  subscription_plan.py  superadmin.py  tenant.py  tenant_customer.py  tenant_employee.py  tenant_user.py  (+2 more)
app/schemas/: __init__.py  app_customer.py  app_user.py  auth.py  complaint.py  complaint_attachment.py  customer.py  customer_product.py  dashboard.py  employee.py  inventory.py  inventory_product.py  notification.py  role.py  stock_movement.py  subscription_plan.py  superadmin.py  tenant.py  tenant_customer.py  tenant_employee.py  tenant_subscription.py  tenant_user.py  user.py
app/services/: auth_service.py  customer_service.py  role_service.py  superadmin_service.py  tenant_service.py  user_service.py
app/utils/: db.py
tests/: test_main.py
(+7 files in other folders)
